Add oncoprint function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(TCGAvisualize_SurvivalCoxNET)
 export(TCGAvisualize_Tables)
 export(TCGAvisualize_meanMethylation)
 export(TCGAvisualize_mutation)
+export(TCGAvisualize_oncoprint)
 export(TCGAvisualize_profilePlot)
 export(TCGAvisualize_starburst)
 import(ComplexHeatmap)
@@ -50,6 +51,9 @@ import(utils)
 importFrom(Biobase,exprs)
 importFrom(Biobase,phenoData)
 importFrom(BiocGenerics,as.data.frame)
+importFrom(ComplexHeatmap,HeatmapAnnotation)
+importFrom(ComplexHeatmap,draw)
+importFrom(ComplexHeatmap,oncoPrint)
 importFrom(ConsensusClusterPlus,ConsensusClusterPlus)
 importFrom(EDASeq,barplot)
 importFrom(EDASeq,betweenLaneNormalization)
@@ -92,9 +96,12 @@ importFrom(coin,wilcoxsign_test)
 importFrom(cowplot,ggdraw)
 importFrom(cowplot,plot_grid)
 importFrom(cowplot,switch_axis_position)
+importFrom(data.table,":=")
 importFrom(data.table,data.table)
+importFrom(data.table,dcast)
 importFrom(data.table,fread)
 importFrom(data.table,setDF)
+importFrom(data.table,setDT)
 importFrom(data.table,setcolorder)
 importFrom(data.table,setnames)
 importFrom(devtools,load_all)
@@ -125,6 +132,8 @@ importFrom(grDevices,gray.colors)
 importFrom(grDevices,pdf)
 importFrom(grDevices,png)
 importFrom(grDevices,rainbow)
+importFrom(grid,gpar)
+importFrom(grid,grid.rect)
 importFrom(httr,GET)
 importFrom(igraph,"V<-")
 importFrom(igraph,E)
