--- a/NAMESPACE
+++ b/NAMESPACE
@@ -123,6 +123,7 @@ importFrom(edgeR,topTags)
 importFrom(genefilter,varFilter)
 importFrom(ggrepel,geom_label_repel)
 importFrom(ggrepel,geom_text_repel)
+importFrom(ggthemes,theme_base)
 importFrom(gplots,greenred)
 importFrom(grDevices,dev.list)
 importFrom(grDevices,dev.off)
