--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,7 @@ importFrom(SummarizedExperiment,rowRanges)
 importFrom(affy,ReadAffy)
 importFrom(affy,rma)
 importFrom(biomaRt,getBM)
+importFrom(biomaRt,listDatasets)
 importFrom(biomaRt,useMart)
 importFrom(circlize,colorRamp2)
 importFrom(coin,pvalue)
