--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(GDCDownload)
 export(GDCPrepare)
+export(GDCPrepare_clinic)
 export(GDCquery)
 export(GDCquery_Maf)
 export(GDCquery_clinic)
@@ -89,6 +90,9 @@ importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,assay)
 importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowRanges)
+importFrom(XML,getNodeSet)
+importFrom(XML,xmlParse)
+importFrom(XML,xmlToDataFrame)
 importFrom(affy,ReadAffy)
 importFrom(affy,rma)
 importFrom(biomaRt,getBM)
@@ -181,4 +185,6 @@ importFrom(survival,survdiff)
 importFrom(survival,survfit)
 importFrom(tools,md5sum)
 importFrom(xml2,read_html)
+importFrom(xml2,read_xml)
+importFrom(xml2,xml_ns)
 importFrom(xtable,xtable)
