--- a/NAMESPACE
+++ b/NAMESPACE
@@ -181,6 +181,7 @@ importFrom(survival,Surv)
 importFrom(survival,coxph)
 importFrom(survival,survdiff)
 importFrom(survival,survfit)
+importFrom(tools,file_ext)
 importFrom(tools,md5sum)
 importFrom(xml2,read_html)
 importFrom(xml2,read_xml)
