--- a/NAMESPACE
+++ b/NAMESPACE
@@ -183,6 +183,7 @@ importFrom(survival,survdiff)
 importFrom(survival,survfit)
 importFrom(tools,file_ext)
 importFrom(tools,md5sum)
+importFrom(utils,untar)
 importFrom(xml2,read_html)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_ns)
