--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,7 @@ importFrom(coin,wilcoxsign_test)
 importFrom(cowplot,ggdraw)
 importFrom(cowplot,plot_grid)
 importFrom(cowplot,switch_axis_position)
+importFrom(curl,curl_download)
 importFrom(data.table,":=")
 importFrom(data.table,data.table)
 importFrom(data.table,dcast)
