--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ import(TxDb.Hsapiens.UCSC.hg19.knownGene)
 import(ggplot2)
 import(graphics)
 import(gtable)
+import(httr)
 import(magrittr)
 import(readr)
 import(sjmisc)
