starting to use GenomicDataCommons R package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,10 +60,12 @@ importFrom(EDASeq,exprs)
 importFrom(EDASeq,newSeqExpressionSet)
 importFrom(EDASeq,offst)
 importFrom(EDASeq,withinLaneNormalization)
+importFrom(GenomicDataCommons,files)
+importFrom(GenomicDataCommons,gdcdata)
+importFrom(GenomicDataCommons,manifest)
 importFrom(GenomicRanges,GRanges)
 importFrom(GenomicRanges,makeGRangesFromDataFrame)
 importFrom(IRanges,IRanges)
-importFrom(R.utils,gunzip)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
@@ -91,7 +93,6 @@ importFrom(clusterProfiler,bitr)
 importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
 importFrom(data.table,dcast)
-importFrom(data.table,fread)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setDF)
 importFrom(data.table,setDT)
