starting to use GenomicDataCommons R package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(GDCprepare_clinic)
 export(GDCquery)
 export(GDCquery_Maf)
 export(GDCquery_clinic)
+export(GDCquery_maf)
 export(TCGAVisualize_volcano)
 export(TCGAanalyze_Clustering)
 export(TCGAanalyze_DEA)
@@ -41,7 +42,6 @@ export(isServeOK)
 import(ComplexHeatmap)
 import(ggplot2)
 import(graphics)
-import(httr)
 import(readr)
 import(selectr)
 import(stats)
@@ -93,6 +93,7 @@ importFrom(clusterProfiler,bitr)
 importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
 importFrom(data.table,dcast)
+importFrom(data.table,fread)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setDF)
 importFrom(data.table,setDT)
@@ -172,8 +173,6 @@ importFrom(survival,survfit)
 importFrom(survminer,ggsurvplot)
 importFrom(tibble,as_data_frame)
 importFrom(tools,file_ext)
-importFrom(tools,md5sum)
-importFrom(utils,untar)
 importFrom(xml2,read_html)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_ns)
